# avatar-gdbstub

./: .gitignore  CMakeLists.txt  README.md
cmake/: avatarstub_ST3320413AS_0x7000.cmake  gdbstub_ST3320413AS_0x7000.cmake  gdbstub_plc_bootloader_0x16000.cmake  gdbstub_qemu_versatilepb.cmake  platform_arm.cmake
cmake/avatarstub_ST3320413AS_0x7000/: CMakeLists.txt
cmake/avatarstub_qemu_versatilepb/: CMakeLists.txt
cmake/gdbstub_ST3320413AS_0x3FC000/: CMakeLists.txt
cmake/gdbstub_ST3320413AS_0x7000/: CMakeLists.txt
cmake/gdbstub_inforad_k0_0x0/: CMakeLists.txt
cmake/gdbstub_plc_bootloader_0x16000/: CMakeLists.txt
cmake/gdbstub_qemu_versatilepb/: CMakeLists.txt
include/: ArmGdbHelpers.h  ArmRegisterMap.h  Assert.h  AvatarHostInterface.h  DefaultDefines.h  GdbHostInterface.h  HostInterface.h  Memory.h  RegisterMap.h  ST3320413AS_avatar_config.h  ST3320413AS_gdb_config.h  Serial.h  SerialIO.h  StubState.h  armv7_cortex_r4.h  crc.h  gdb_utils.h  inforad_k0_gdb_config.h  plc_bootloader_gdb_config.h  qemu_versatilepb_gdb_config.h
include/stdlib/: string.h
link/: arm_ST3320413AS_0x3FC000.ld  arm_ST3320413AS_0x7000.ld  arm_beagleboard.ld  arm_inforad_k0_0x0.ld  arm_integratorcp.ld  arm_plc_bootloader_0x16000.ld  arm_qemu_versatilepb.ld
scripts/: .gdbinit.py.swo  Inforad_K0_flasher.py  ST3320413AS_stub_monitor.py  Seagate_ST3320413AS_flasher.py
src/: ArmGdbHelpers.c  ArmRegisterMap.c  AvatarHostInterface.c  GdbHostInterface.c  Memory.c  SerialIO.c  Serial_pl011.c  Serial_sirf.c  Serial_uart16550.c  armv7_cortex_r4.c  crc.c  lowlevel_ST3320413AS.S  lowlevel_arm.S  lowlevel_inforad_k0.S  lowlevel_plc.S  lowlevel_qemu_versatilepb.S  stub.c  utils.c  utils_arm.S
src/stdlib/: memset.c
test_programs/: Makefile  coprocessor.h  cpuid.c  debug.c  hello_world.c  hwdebug.h  link.ld  startup_inforad_k0.h  swbreakpoint.c  uart_common.h  uart_sirf.h
xml/: arm-gdbstub.xml
